Turkish Text Categorization started

--- a/IMDB_Movie_Reviews/IMBD.ipynb
+++ b/IMDB_Movie_Reviews/IMBD.ipynb
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standing-handbook",
+   "id": "accessory-morocco",
    "metadata": {},
    "source": [
     "#### XGBoost Classification"
@@ -796,7 +796,7 @@
     }
    ],
    "source": [
-    "xgb_model = XGBClassifier(n_estimators=1000, learning_rate=0.05, max_depth = 10)\n",
+    "xgb_model = XGBClassifier(n_estimators=1000, learning_rate=0.05, max_depth = 10, use_label_encoder=False)\n",
     "xgb_model.fit(X_train_tfidf, y_train)\n",
     "xgb_pred = xgb_model.predict(X_test_tfidf)\n",
     "xgb_acc = accuracy_score(y_test, xgb_pred.round())\n",
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selected-initial",
+   "id": "diverse-petroleum",
    "metadata": {},
    "source": [
     "#### Logistic Regression"
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "persistent-rover",
+   "id": "parliamentary-joint",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collective-payment",
+   "id": "english-barrel",
    "metadata": {},
    "source": [
     "#### Multinomial Naive Bayes"
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "norwegian-scheme",
+   "id": "armed-slovak",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "administrative-bowling",
+   "id": "split-effect",
    "metadata": {},
    "source": [
     "#### Linear SVM"
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "armed-milwaukee",
+   "id": "respiratory-farmer",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outdoor-factory",
+   "id": "surprising-graph",
    "metadata": {},
    "source": [
     "#### Compare Scores"
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "suitable-table",
+   "id": "wanted-overall",
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "optimum-victim",
+   "id": "binary-associate",
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaningful-china",
+   "id": "returning-pastor",
    "metadata": {},
    "source": [
     "Seems almost same when we see accuracy scores of each model"
@@ -1119,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mental-atlantic",
+   "id": "organizational-liberia",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attended-perfume",
+   "id": "hourly-forth",
    "metadata": {},
    "outputs": [],
    "source": []
