--- a/Turkish_Text_Categorization/Turkish Text Categorization.ipynb
+++ b/Turkish_Text_Categorization/Turkish Text Categorization.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "monetary-palestine",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,7 @@
     "from nltk.corpus import stopwords\n",
     "from nltk import sent_tokenize, word_tokenize\n",
     "from nltk.stem.porter import *\n",
+    "from nltk.stem import PorterStemmer\n",
     "from snowballstemmer import TurkishStemmer\n",
     "\n",
     "import transformers\n",
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entitled-oliver",
+   "id": "virtual-marriage",
    "metadata": {},
    "source": [
     "#### Data cleaning\n",
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooked-hamilton",
+   "id": "noticed-victor",
    "metadata": {},
    "source": [
     "#### SENTENCE TOKENIZATION"
@@ -280,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "wired-first",
+   "id": "incorporate-routine",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "secondary-wealth",
+   "id": "stainless-newcastle",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "significant-pontiac",
+   "id": "breathing-fortune",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moving-irrigation",
+   "id": "complicated-overhead",
    "metadata": {},
    "source": [
     "#### REMOVE UNNECESSARY CHARACTERS"
@@ -449,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "lesbian-stamp",
+   "id": "persistent-detection",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "collect-conversion",
+   "id": "human-asbestos",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excellent-robinson",
+   "id": "native-harassment",
    "metadata": {},
    "source": [
     "#### WORD TOKENIZATION"
@@ -628,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "favorite-patch",
+   "id": "plain-yugoslavia",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assured-bacon",
+   "id": "demonstrated-estate",
    "metadata": {},
    "source": [
     "#### STEMMING"
@@ -751,8 +752,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "dominican-rebate",
+   "execution_count": 36,
+   "id": "other-savings",
    "metadata": {},
    "outputs": [
     {
@@ -793,8 +794,8 @@
        "      <td>ön seçim vaadi mhp olağan büyük kurultayı nda ...</td>\n",
        "      <td>[ön, seçim, vaadi, mhp, olağan, büyük, kurulta...</td>\n",
        "      <td>719</td>\n",
-       "      <td>ön seçim vaadi mhp olağan büyük kurultayı nda ...</td>\n",
-       "      <td>5889</td>\n",
+       "      <td>([)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -803,8 +804,8 @@
        "      <td>mesut yılmaz yüce divan ceza alabilirdi prof d...</td>\n",
        "      <td>[mesut, yılmaz, yüce, divan, ceza, alabilirdi,...</td>\n",
        "      <td>379</td>\n",
-       "      <td>mesut yılmaz yüce divan ceza alabilirdi prof d...</td>\n",
-       "      <td>2962</td>\n",
+       "      <td>([)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -813,8 +814,8 @@
        "      <td>disko lar kaldırılıyor başbakan yardımcısı arı...</td>\n",
        "      <td>[disko, lar, kaldırılıyor, başbakan, yardımcıs...</td>\n",
        "      <td>575</td>\n",
-       "      <td>disko lar kaldırılıyor başbakan yardımcısı arı...</td>\n",
-       "      <td>4769</td>\n",
+       "      <td>([)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -823,8 +824,8 @@
        "      <td>sarıgül anayasa mahkemesi gidiyor mustafa sarı...</td>\n",
        "      <td>[sarıgül, anayasa, mahkemesi, gidiyor, mustafa...</td>\n",
        "      <td>72</td>\n",
-       "      <td>sarıgül anayasa mahkemesi gidiyor mustafa sarı...</td>\n",
-       "      <td>595</td>\n",
+       "      <td>([)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -833,8 +834,8 @@
        "      <td>erdoğan idamın haklılık sebebi demek yeri geld...</td>\n",
        "      <td>[erdoğan, idamın, haklılık, sebebi, demek, yer...</td>\n",
        "      <td>167</td>\n",
-       "      <td>erdoğan idamın haklılık sebebi demek yeri geld...</td>\n",
-       "      <td>1301</td>\n",
+       "      <td>([)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -862,22 +863,25 @@
        "3  [sarıgül, anayasa, mahkemesi, gidiyor, mustafa...               72   \n",
        "4  [erdoğan, idamın, haklılık, sebebi, demek, yer...              167   \n",
        "\n",
-       "                                      text_word_stem  text_word_stem_count  \n",
-       "0  ön seçim vaadi mhp olağan büyük kurultayı nda ...                  5889  \n",
-       "1  mesut yılmaz yüce divan ceza alabilirdi prof d...                  2962  \n",
-       "2  disko lar kaldırılıyor başbakan yardımcısı arı...                  4769  \n",
-       "3  sarıgül anayasa mahkemesi gidiyor mustafa sarı...                   595  \n",
-       "4  erdoğan idamın haklılık sebebi demek yeri geld...                  1301  "
+       "  text_word_stem  text_word_stem_count  \n",
+       "0            ([)                     1  \n",
+       "1            ([)                     1  \n",
+       "2            ([)                     1  \n",
+       "3            ([)                     1  \n",
+       "4            ([)                     1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "turkish_stem = TurkishStemmer()\n",
-    "data['text_word_stem'] = [turkish_stem.stemWord(word) for word in data['cleaned_text']]\n",
+    "data['text_word_stem'] = [\n",
+    "                            morphology.analyzeAndDisambiguate(str(word)).bestAnalysis()[0].getLemmas()[0] \n",
+    "                            for word in data['text_word']\n",
+    "                         ]\n",
     "data['text_word_stem_count'] = data['text_word_stem'].apply(len)\n",
     "\n",
     "data.head()"
@@ -885,17 +889,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "powerful-consensus",
+   "execution_count": 37,
+   "id": "muslim-philosophy",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'sarıgül anayasa mahkemesi gidiyor mustafa sarıgül ilçedeki sınır değişikliğine itiraz anayasa mahkemesi başvuracak şişli belediye başkanı mustafa sarıgül büyükşehir yasası birlikte ilçedeki sınır değişikliliğine itiraz cuma günü anayasa mahkemesi başvuruda bulunacak büyükşehir yasası birlikte şişli den alınarak sarıyer bağlanan maslak ayazağa huzur mahalleleri karar anayasa mahkemesi taşınıyor şişli belediye başkanı mustafa sarıgül ün bölgeyi temsil belediye meclis üyeleri mahalle muhtarlarından oluşan heyetle yarın ankara giderek kararın iptali anayasa mahkemesi başvuracağı öğrenildi dha'"
+       "'['"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,8 +910,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "institutional-romantic",
+   "execution_count": 18,
+   "id": "developed-lodge",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +920,7 @@
        "'sarıgül anayasa mahkemesi gidiyor mustafa sarıgül ilçedeki sınır değişikliğine itiraz anayasa mahkemesi başvuracak şişli belediye başkanı mustafa sarıgül büyükşehir yasası birlikte ilçedeki sınır değişikliliğine itiraz cuma günü anayasa mahkemesi başvuruda bulunacak büyükşehir yasası birlikte şişli den alınarak sarıyer bağlanan maslak ayazağa huzur mahalleleri karar anayasa mahkemesi taşınıyor şişli belediye başkanı mustafa sarıgül ün bölgeyi temsil belediye meclis üyeleri mahalle muhtarlarından oluşan heyetle yarın ankara giderek kararın iptali anayasa mahkemesi başvuracağı öğrenildi dha'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,8 +931,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "given-owner",
+   "execution_count": 19,
+   "id": "tight-soundtrack",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +941,7 @@
        "'başvurmak'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,11 +953,90 @@
   },
   {
    "cell_type": "markdown",
-   "id": "visible-following",
+   "id": "vocational-cooler",
    "metadata": {},
    "source": [
-    "T"
+    "There is a problem on Turkish stemming, needs to be checked again."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "personalized-accountability",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kitap\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "from jpype import JClass, JString, getDefaultJVMPath, shutdownJVM, startJVM, java\n",
+    "ZEMBEREK_PATH = 'D:\\zemberek-full_old.jar'\n",
+    "startJVM(getDefaultJVMPath(), '-ea', '-Djava.class.path=%s' % (ZEMBEREK_PATH))\n",
+    "TurkishMorphology = JClass('zemberek.morphology.TurkishMorphology')\n",
+    "morphology = TurkishMorphology.createWithDefaults()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "dietary-pearl",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<java class 'java.lang.String'>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token = 'unutmak'\n",
+    "lemma_word = morphology.analyzeAndDisambiguate(str(token)).bestAnalysis()[0].getLemmas()[0]\n",
+    "type(lemma_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "automotive-diamond",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'java.util.ArrayList' object has no attribute 'getLemmas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m words \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgidiyor\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124milçedeki\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeğişikliğine\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitiraz\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m words:\n\u001b[1;32m----> 3\u001b[0m     lemma_word \u001b[38;5;241m=\u001b[39m [ \u001b[43mmorphology\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43manalyzeAndDisambiguate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mword\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbestAnalysis\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetLemmas\u001b[49m()[\u001b[38;5;241m0\u001b[39m] ]\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lemma_word)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'java.util.ArrayList' object has no attribute 'getLemmas'"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['gidiyor', 'ilçedeki', 'değişikliğine', 'itiraz']\n",
+    "for word in words:\n",
+    "    lemma_word = [ morphology.analyzeAndDisambiguate(str(word)).bestAnalysis()[0].getLemmas()[0] ]\n",
+    "    print(lemma_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "accompanied-opinion",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
